2000-08-01  Tristan Tarrant  <tarrant_tristan@emc.com>

	* game.*, bggame.cc, sigame.cc: implemented shape lists. SI now has
	placeholder intro/endgame sequences (it plays the proper FLIcs, but
	nothing else really).
	* gumps.*: use shape lists instead of hardcoded constants. Most
	gumps now work properly under BG and SI. Paperdolling will be
	hard...

2000-07-31  Tristan Tarrant  <tarrant_tristan@emc.com>

	* game.*, bggame.cc, sigame.cc: separated game-dependent stuff into
	separate files with an abstract Game class.
	* exult.cc, gamewin.*, usecode.cc: modified to take the above into
	account
	* files/Flat.*: added a new filetype, which is for simple files 
	(e.g. The palettes in Serpent Isle)

2000-07-31  Tristan Tarrant  <tarrant_tristan@emc.com>

	* exult.cc, gamewin.*, imagewin.*: support resolution switching
	with ALT-PLUS and ALT-MINUS. Also show messages when certain 'cheat'
	keys are pressed.
	* Makefile.am: make sure DEBUG_FLAGS is used at link.

2000-07-30  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: Monsters attack automatically; midi's played.
	* actors.cc, gamewin.{cc,h}:  Show poisoned auras.

2000-07-29  Jeff Freedman  <jeff@amy.nerble.net>

	* Added 'prev' field to Game_object, and added iterators.

	* Fixed nasty stack bug in Usecode.  Penumbra/blackrock now works.

2000-07-28 Tristan Tarrant  <tarrant_tristan@emc.com>
	
	* gamewin.cc, gametxt.cc, titles.cc: move initialization of endgame
	fonts to endgame.

2000-07-28 Tristan Tarrant  <tarrant_tristan@emc.com>

	* exult.cc: Implement "Home" key which recenters view on Avatar.
	Useful if you've been scrolling around with the arrow keys.
	Also implement config/gameplay/cheat option.

2000-07-27  Jeff Freedman  <jeff@amy.nerble.net>

	* Support 'something_on' eggs.
	* Added ctrl-c cheat to create items.

2000-07-27 Tristan Tarrant  <tarrant_tristan@emc.com>
	
	* titles.cc: use Infidel's real name, correct some spelling mistakes, 